--- a/booking-frontend/src/App.css
+++ b/booking-frontend/src/App.css
@@ -1,9 +1,10 @@
 #root {
   width:100vw;
-  height: 100%;
+  height: 100dvh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .logo {
