--- a/booking-frontend/src/index.css
+++ b/booking-frontend/src/index.css
@@ -63,11 +63,12 @@
 
 a {
   font-weight: 500;
-  color: #fff;
   text-decoration: inherit;
+  outline: none;
 }
 a:hover {
-  color: #535bf2;
+  color:#686868
+  
 }
 
 body {
